[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mudprod"
version = "0.1.0"
description = "Integration testing framework for MUD (Multi-User Dungeon) servers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "mudprod contributors"}
]
keywords = ["mud", "testing", "telnet", "integration-testing", "game-testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Multi-User Dungeons (MUD)",
    "Topic :: Software Development :: Testing",
]

dependencies = []

[project.optional-dependencies]
pytest = [
    "pytest>=7.0.0",
    "pytest-timeout>=2.0.0",
]
html = [
    "pytest-html>=4.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-timeout>=2.0.0",
    "pytest-html>=4.0.0",
    "black",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/mudprod/mudprod"
Repository = "https://github.com/mudprod/mudprod"
Issues = "https://github.com/mudprod/mudprod/issues"

[project.scripts]
mudprod = "mudprod.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mudprod*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
